welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:-9: error: not found: value isFacingTrail
			if (isFacingTrail()) {
                            ^SlugTracking:4: error: return outside method definition
		return false
                ^SlugTracking:8: error: java.awt.Color does not take parameters
	if (Color.green()){
                       ^